@@ -1,2 +1,2 @@
 DIST avbin-linux-x86-32-7.tar.gz 1499992 SHA256 218b1f40d54762cd7ad4382faf0c5242a8c18def076b67bd308f62ac34560b2f
-DIST avbin-linux-x86-64-7.tar.gz 1509724 SHA256 d60dd48be45024360cf6fc1fa16110e14057ab5f971d35384a79f49ac156d3f2
+DIST avbin-linux-x86-64-7.tar.gz 1509724 SHA256 d60dd48be45024360cf6fc1fa16110e14057ab5f971d35384a79f49ac156d3f2 SHA512 6e31eaebf0eed1eda7c963e3aa27ac2cad35b36a0d2bce63489e235b1a9cb412002370b1268b28ce8509d75baab17a2424ab7620799305b63228feb4b6d0707b WHIRLPOOL 81bfb76f4531a893357937ace2daa9da9b35089bc094bc7e4690c282a1a592ac4fb60e3fd564f206d42c41cefc0bdb97bd145593c8f2f4372b59415e9654f9de
