@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/avbin-bin
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  09 Jun 2015; Alexander Presnyakov <flagist0@gmail.com> avbin-bin-7.ebuild:
+  neuro/sci: media-libs/avbin-bin build fixed -- package S (source directory)
+  depends on architecture
 
   10 Nov 2014; Justin Lecher <jlec@gentoo.org> avbin-bin-7.ebuild,
   metadata.xml:
@@ -24,4 +28,3 @@
   29 May 2008; Andrey Grozin <grozin@gentoo.org>
   +metadata.xml, +avbin-bin-3.ebuild:
   Initial import, thanks to Thomas Pani, bug #207125
-
